--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,27 @@
 
 body {
   background: #fcc;
-} 
+}
+.menu {
+  background-color: #555;
+  color:#fff;
+  line-height: 2em;
+}
+.menu-nav {
+  display: flex;
+}
 
+/*.menu:hover + nav, nav:hover {
+  display: flex;
+}*/
+nav {
+  display: none;
+  flex-direction: column;
+  background-color: #555;
+}
+a {
+  color: #fff;
+}
 
 
 /* TABLET STYLES */
@@ -14,10 +33,17 @@ body {
 @media screen and (min-width: 500px) {
 
   /* applies to screens wider than 499px */
-  
   body {
     background: #cfc;
-  } 
+  }
+  nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+.menu {
+  display: none;
+}
 }
 
 
@@ -30,5 +56,5 @@ body {
 
   body {
     background: #ccf;
-  } 
+  }
 }
